# SAMatcher

./: .gitignore  README.md  eval_pose_estimation.py  evaluation.py  main.py  pyproject.toml  test.py  train.py  train.sh  visualize_training_log.py
configs/: accelerate_config.yaml  default.py  main.py  sam_2.1_hiera_preserved_args.yaml  train_config.py
data/: train_list.txt  val_processed_list.txt
dloc/core/: extract_features.py  match_features.py  overlap_features.py
dloc/core/extractors/: landmark.py
dloc/core/overlaps/: detmatcher.py  samatcher.py
dloc/core/utils/: utils.py
scripts/: batch_eval_all.py  eval_pose_estimation.py  evaluate_megadepth.sh  evaluation.py  plot_ridgeline.py  plot_training.sh  prepare_megadepth.py  train.sh  valid_utils.py  viz_gl3d_scannet.sh
src/: __init__.py  build_model.py  build_sam.py  build_samatcher.py  data.py  sam2_image_predictor.py  train_samatcher.py
src/configs/sam2.1/: sam2.1_hiera_l_sammatcher.yaml
src/modeling/: memory_attention.py  memory_encoder.py  sam2_base.py  sam2_hq_base.py  sam2_utils.py
src/modeling/backbones/: hieradet.py
src/modeling/prompter/: CCT.py  SwinV2_CCT.py  lwapp.py  posemb_layers.py  prompter.py  swin2_correlator.py  symswinfuser.py  transformer.py
src/modeling/sam/: mask_decoder.py  mask_hq_decoder.py  prompt_encoder.py  transformer.py
src/utils/: dataset.py  loss_mask.py  metrics_mask.py  misc.py  optimizers.py  profiler.py  utils.py
