[project]
name = "samatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "einops>=0.8.1",
    "h5py>=3.13.0",
    "huggingface-hub>=0.32.3",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "timm>=1.0.15",
    "wandb>=0.19.11",
    "yacs>=0.1.8",
    "torch==2.2.0+cu121",
    "flash-attn==2.7.4.post1"
]

[tool.uv.pip]
index-url = "https://download.pytorch.org/whl/cu121"

[tool.uv]
no-build-isolation-package = ["flash-attn"]
