[project]
name = "samatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "numpy>=1.26.4,<2.0.0",
    "accelerate>=1.7.0,<1.14",
    "einops>=0.8.1,<0.8.3",
    "h5py>=3.13.0,<3.15",
    "huggingface-hub>=0.32.3,<0.33",
    "hydra-core>=1.3.2,<1.4",
    "iopath>=0.1.10,<0.1.11",
    "loguru>=0.7.3,<0.7.4",
    "matplotlib>=3.10.3,<3.11",
    "opencv-python>=4.11.0.86,<4.12",
    "timm>=1.0.15,<1.0.20",
    "wandb>=0.19.11,<0.20",
    "yacs>=0.1.8,<0.1.9",
    "torch==2.2.0+cu121",
    "flash-attn==2.7.4.post1"
]

[tool.uv.pip]
index-url = "https://download.pytorch.org/whl/cu121"

[tool.uv]
no-build-isolation-package = ["flash-attn"]